[package]

name = "ringbuf"
version = "0.1.0"
authors = [ "dan@danburkert.com" ]

[[lib]]
name = "ringbuf"
path = "src/lib.rs"

#[[bin]]
#name = "ringbuf-bench" # the name of the executable to generate
#path = "bench/bin.rs"

[dependencies.criterion]
git = "https://github.com/danburkert/criterion.rs.git"

[dependencies.quickcheck]
git = "https://github.com/BurntSushi/quickcheck.git"
